--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -3,10 +3,10 @@
         <h2>Reporte diario</h2>
         <h3>Situación meteorológica</h3>
         <h4>Mapa de acumulado semanal</h4>
-        <p><img src={{mapa_synop_semanal}}></p>
+        <p><img class="mapa" src={{mapa_synop_semanal}}></p>
         <p>{{texto_synop_semanal}}</p>
         <h4>Mapa de pronóstico a 7 días</h4>
-        <p><img src={{mapa_suma_gfs}}></p>
+        <p><img class="mapa" src={{mapa_suma_gfs}}></p>
         <h3>Situación hidrológica</h3>
         <h4>Tabla de situación y perspectiva a corto plazo</h4>
         <table>
@@ -32,7 +32,7 @@
         <p>{{texto_hidro}}</p>
         <h4>Hidrogramas</h4>
         {{#each hidrogramas}}
-            <p><img src={{this}}></p>
+            <p><img class="plot" src={{this}}></p>
         {{/each}}
       </div>
     </section>
