--- a/public/my_styles/reporte.css
+++ b/public/my_styles/reporte.css
@@ -46,7 +46,7 @@
 
 #report_container { 
     margin: 0 auto;
-    padding: 40px;
+    padding: 10px;
     background: white;
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
     box-sizing: border-box;
@@ -59,4 +59,19 @@
 #report_container table td, #report_container table th {
     padding: 10px;
     border: #EFEFEF solid 1px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+@media (max-width: 660px) {
+    .container-reporte p {
+        max-width: 95vw;
+        min-width: 300px;
+    }
+
+    .richText .richText-editor table.leyenda-tabla-hidro, #report_container table.leyenda-tabla-hidro {
+        margin-left: 100px;
+    }
 }
