--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>Editor de reporte diario</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -144,7 +142,7 @@
           blocker.style.display = 'none'; // re-enable interaction
         }
       }
-      loadContent('/content')
+      loadContent('content')
       // const toggleBtn = document.getElementById('toggleView');
       const htmlView = document.getElementById('html-view');
       const editorContainer = document.getElementById('editor');
@@ -194,7 +192,7 @@
       // Save content
     function saveContent() {
       const html = $("textarea#editor").val();
-      fetch('/save', {
+      fetch('save', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ html })
@@ -203,7 +201,7 @@
 
     // new from template
     function startFromTemplate() {
-      loadContent("/template")
+      loadContent("template")
     }
 
 
@@ -245,4 +243,3 @@
 
   </script>
 </body>
-</html>
