fix saved route

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -107,9 +107,11 @@
         <textarea id="editor"></textarea>
       </div>
       <div>
-        <button class="button" id=save-button onclick="saveContent()">Guardar</button>
         <span>
           <button class="button" id=load-template-button onclick="startFromTemplate()">Cargar plantilla</button>
+        </span>
+        <span>
+          <button class="button" id=save-button onclick="saveContent()">Guardar</button>
         </span>
         <span>
           <a href="reporte_diario.html" target="_blank">Ver</a>
