--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -9,7 +9,7 @@
       <div class="mapas-flex-item"><img class="mapa" src={{mapa_synop_semanal}}></div>
       <div class="mapas-flex-item"><img class="mapa" src={{mapa_suma_gfs}}></div>
     </div>
-    <p>{{texto_synop_semanal}}</p>
+    <div class="paragraph">{{texto_synop_semanal}}</div>
     <h3>Situación hidrológica</h3>
     {{!-- <h4>Tabla de situación y perspectiva a corto plazo</h4> --}}
     <table class="tabla-hidro">
@@ -63,10 +63,15 @@
       <tr><td style="background-color: {{status_colors.aguas_medias_bajas}} !important;"> aguas medias bajas</td></tr>
       <tr><td style="background-color: {{status_colors.aguas_bajas}} !important;">aguas bajas</td></tr>
     </table>
-    <p>{{texto_hidro}}</p>
+    <div class="paragraph">{{texto_hidro}}</div>
     <h4>Hidrogramas</h4>
     {{#each hidrogramas}}
-        <p><img class="plot" id="hidrograma-{{this.id}}" src={{this.src}}></p>
+        <div class="accordion">
+          <div class="accordion-header">{{this.river}} - {{this.name}}</div>
+          <div class="accordion-content">
+            <img class="plot" id="hidrograma-{{this.id}}" src={{this.src}} alt="{{this.name}}">
+          </div>
+        </div>
     {{/each}}
   </div>
 </div>
