pdf current date

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -114,7 +114,7 @@
           <button class="button" id=save-button onclick="saveContent()">Guardar</button>
         </span>
         <span>
-          <a href="reporte_diario.html" target="_blank">Ver</a>
+          <a href="reporte_diario" target="_blank">Ver</a>
         </span>
       </div>
     </div>
