--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -81,5 +81,26 @@
           </div>
         </div>
     {{/each}}
+    <div>
+      <h4>Notas</h4>
+      <ul>
+        <li>Los pronósticos del río Paraná (tramo medio) se actualizan los días martes (a 7 y 14 días) y viernes (4 y 11 días)</li>
+        <li>Los pronósticos del río Uruguay se actualizan los lunes, miércoles y viernes.</li>
+        <li>
+          Para mayor seguimiento los productos operativos y experimentales de monitoreo, pronóstico y perspectiva pueden consultarse en:
+          <ul>
+            <li><a href="https://ina.gob.ar/alerta/">http://ina.gob.ar/alerta/</a> (sitio del Alerta Hidrológico de CDP del INA)</li>
+            <li><a href="https://alerta.ina.gob.ar/pub/mapa">https://alerta.ina.gob.ar/pub/mapa</a> (mapa web, productos puntuales y areales)</li>
+            <li><a href="https://alerta.ina.gob.ar/a5/secciones">https://alerta.ina.gob.ar/a5/secciones</a> (series de observaciones y previsiones numéricas de nivel o caudal)</li>
+            <li><a href="https://ina.gob.ar/alerta/index.php?seccion=10">https://ina.gob.ar/alerta/index.php?seccion=10</a> (previsiones numéricas Delta del Paraná)</li>
+          </ul>
+        </li>
+        <li>Niveles de aguas altas son aquellos valores que se igualan o exceden en el 5&#37; o menos de los registros disponibles, en el sitio de medición.</li>
+        <li>Niveles de aguas medias altas son aquellos valores que se igualan o exceden entre el 25&#37; y el 5&#37; de los registros disponibles, en el sitio de medición (por encima de los normales).</li>
+        <li>Niveles de aguas medias son aquellos valores que se igualan o exceden entre el 75&#37; y el 25&#37; de los registros disponibles, en el sitio de medición (normales).</li>
+        <li>Niveles de aguas medias bajas son aquellos valores que se igualan o exceden entre el 95&#37; y el 75&#37; de los registros disponibles, en el sitio de medición (por debajo de los normales).</li>
+        <li>Niveles de aguas bajas son aquellos valores que se igualan o exceden en más del 95&#37; de los registros disponibles, en el sitio de medición</li>
+      </ul>
+    </div>
   </div>
 </div>
